fix smell code